Added more specific error messages.

--- a/app/src/main/res/layout/trade.xml
+++ b/app/src/main/res/layout/trade.xml
@@ -154,6 +154,90 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayoutII"
         app:layout_constraintVertical_bias="0.460" />
 
+    <TextView
+        android:id="@+id/errorEmptyText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="60dp"
+        android:layout_marginLeft="60dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="157dp"
+        android:layout_marginRight="157dp"
+        android:layout_marginBottom="25dp"
+        android:text="The quantity field is empty."
+        android:textColor="#900"
+        android:visibility="invisible"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.107"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayoutII"
+        app:layout_constraintVertical_bias="0.460" />
+
+    <TextView
+        android:id="@+id/errorNotEnoughMoney"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="60dp"
+        android:layout_marginLeft="60dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="157dp"
+        android:layout_marginRight="157dp"
+        android:layout_marginBottom="25dp"
+        android:text="You don't have enough money!"
+        android:textColor="#900"
+        android:visibility="invisible"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.107"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayoutII"
+        app:layout_constraintVertical_bias="0.460" />
+
+        <TextView
+        android:id="@+id/errorNotEnoughSpace"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="60dp"
+        android:layout_marginLeft="60dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="157dp"
+        android:layout_marginRight="157dp"
+        android:layout_marginBottom="25dp"
+        android:text="You don't have enough space in your inventory!"
+        android:textColor="#900"
+        android:visibility="invisible"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.107"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayoutII"
+        app:layout_constraintVertical_bias="0.460" />
+
+        <TextView
+        android:id="@+id/errorNotEnoughGoods"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="60dp"
+        android:layout_marginLeft="60dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="157dp"
+        android:layout_marginRight="157dp"
+        android:layout_marginBottom="25dp"
+        android:text="You don't have that many goods to sell!"
+        android:textColor="#900"
+        android:visibility="invisible"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.107"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayoutII"
+        app:layout_constraintVertical_bias="0.460" />
+
     <Button
         android:id="@+id/toInventory"
         android:layout_width="wrap_content"
