--- a/app/src/main/res/layout/map.xml
+++ b/app/src/main/res/layout/map.xml
@@ -304,4 +304,18 @@
             android:layout_height="match_parent"
             android:layout_weight="1" />
     </LinearLayout>
+    <TextView
+        android:id="@+id/errorFuel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="60dp"
+        android:layout_marginLeft="60dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="157dp"
+        android:layout_marginRight="157dp"
+        android:layout_marginBottom="8dp"
+        android:text="Not enough fuel to travel that far!"
+        android:textColor="#900"
+        android:textSize="20dp"
+        android:visibility="invisible"/>
 </GridLayout>
