--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -15,7 +15,7 @@
     <item
         android:id="@+id/port"
         android:icon="@android:drawable/ic_menu_myplaces"
-        android:title="Port" />
+        android:title="@string/title_port" />
     <item
         android:id="@+id/player_status"
         android:icon="@drawable/ic_notifications_black_24dp"
