--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -33,10 +33,8 @@
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="365dp"
-        android:layout_height="57dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_width="373dp"
+        android:layout_height="59dp"
         android:shadowColor="#505050"
         android:shadowDx="1"
         android:shadowDy="1"
@@ -46,6 +44,7 @@
         android:textColorLink="#8DE67F"
         android:textSize="40sp"
         android:typeface="serif"
+        app:fontFamily="@font/abril_fatface"
         app:layout_constraintBottom_toBottomOf="@+id/fragment_container"
         app:layout_constraintEnd_toEndOf="@+id/fragment_container"
         app:layout_constraintStart_toStartOf="@+id/fragment_container"
