continued ui progress

--- a/app/src/main/res/layout/player_current_status.xml
+++ b/app/src/main/res/layout/player_current_status.xml
@@ -85,7 +85,9 @@
         android:gravity="center_horizontal"
         android:text="Current Skill Points"
         android:textSize="20sp"
+        android:textStyle="bold"
         android:typeface="sans"
+        app:fontFamily="sans-serif-thin"
         app:layout_constraintBottom_toTopOf="@+id/invbutton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -280,6 +282,7 @@
         android:textColor="@android:color/secondary_text_dark"
         android:textSize="40sp"
         android:typeface="sans"
+        app:fontFamily="sans-serif-thin"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.6"
