--- a/app/src/main/res/layout/map.xml
+++ b/app/src/main/res/layout/map.xml
@@ -112,7 +112,7 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="@+id/buttonI"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.875" />
+            app:layout_constraintVertical_bias="0.9" />
 
         <Button
             android:id="@+id/buttonIV"
@@ -134,7 +134,6 @@
             android:id="@+id/buttonV"
             android:layout_width="180sp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:background="#00FFFFFF"
             android:paddingLeft="15sp"
             android:paddingRight="15sp"
@@ -147,7 +146,7 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="@+id/buttonIII"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.92" />
+            app:layout_constraintVertical_bias="0.90999997" />
 
         <Button
             android:id="@+id/buttonVI"
@@ -346,10 +345,8 @@
             android:id="@+id/helpButton"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginTop="8dp"
             android:layout_marginEnd="32dp"
             android:layout_marginRight="32dp"
-            android:layout_marginBottom="8dp"
             android:background="@android:drawable/toast_frame"
             android:foregroundGravity="center"
             android:gravity="center"
@@ -358,7 +355,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textViewX"
-            app:layout_constraintVertical_bias="0.168" />
+            app:layout_constraintVertical_bias="0.26" />
 
 
     </android.support.constraint.ConstraintLayout>
