started working on random events

--- a/app/src/main/res/layout/trade.xml
+++ b/app/src/main/res/layout/trade.xml
@@ -65,8 +65,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="textPersonName"
-            android:text="Buy Quantity" />
+            android:inputType="number" />
 
         <Button
             android:id="@+id/buyButton"
@@ -101,8 +100,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="textPersonName"
-            android:text="Sell Quantity" />
+            android:inputType="number" />
 
         <Button
             android:id="@+id/sellButton"
