--- a/app/src/main/res/layout/event.xml
+++ b/app/src/main/res/layout/event.xml
@@ -45,7 +45,6 @@
         android:typeface="serif"
         android:gravity="center"
         android:layout_marginTop="20dp"
-        android:text="You have been approached by the police. They want to check your bags."
         app:layout_constraintBottom_toBottomOf="@+id/fragment_container"
         app:layout_constraintEnd_toEndOf="@+id/fragment_container"
         app:layout_constraintStart_toStartOf="@+id/fragment_container"
@@ -65,6 +64,7 @@
         android:textSize="18sp"
         android:typeface="serif"
         android:text="What would you like to do?"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/fragment_container"
         app:layout_constraintEnd_toEndOf="@+id/fragment_container"
         app:layout_constraintStart_toStartOf="@+id/fragment_container"
@@ -74,7 +74,7 @@
     <TextView
         android:id="@+id/resultMessage"
         android:layout_width="300dp"
-        android:layout_height="100dp"
+        android:layout_height="70dp"
         android:shadowColor="#505050"
         android:shadowDx="1"
         android:shadowDy="1"
@@ -84,6 +84,7 @@
         android:textSize="16sp"
         android:typeface="serif"
         android:visibility="invisible"
+        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="@+id/fragment_container"
         app:layout_constraintEnd_toEndOf="@+id/fragment_container"
         app:layout_constraintStart_toStartOf="@+id/fragment_container"
@@ -163,6 +164,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="160dp"
         android:tint="#a8a8a8"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/fragment_container"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
