ui SHOULD be finished, some ui logic too

--- a/app/src/main/res/layout/map.xml
+++ b/app/src/main/res/layout/map.xml
@@ -334,7 +334,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="48dp"
+            android:capitalize="characters"
             android:text="@string/title_map"
+            android:textAllCaps="true"
             android:textSize="40sp"
             app:fontFamily="@font/abril_fatface"
             app:layout_constraintEnd_toEndOf="parent"
